@@ -1,4 +1,4 @@
-""" RESTful API endpoint for EEA Versions.
+"""RESTful API endpoint for EEA Versions.
 This module provides the GET endpoint for retrieving version information
 for Plone content items.
 """
@@ -18,7 +18,7 @@ from zope.globalrequest import getRequest
 @implementer(IExpandableElement)
 @adapter(Interface, Interface)
 class EEAVersions:
-    """ EEA Versions """
+    """EEA Versions"""
 
     def __init__(self, context, request):
         self.context = context
@@ -26,42 +26,36 @@ class EEAVersions:
 
     def __call__(self, expand=False, prefix="expand.eea."):
         result = {
-            "eea.versions": {
-                "@id": f"{self.context.absolute_url()}/@eea.versions"
-            }
+            "eea.versions": {"@id": f"{self.context.absolute_url()}/@eea.versions"}
         }
 
         # avoid large queries on layout pages where context is site
         request = getRequest()
         # don't query when we add a new page and we use report_navigation
         is_site = ISiteRoot.providedBy(self.context)
-        if is_site or 'add?type' in request.get('HTTP_REFERER', ''):
+        if is_site or "add?type" in request.get("HTTP_REFERER", ""):
             return result
 
-        relations = queryMultiAdapter(
-            (self.context, self.request), name="eea_versions"
-        )
+        relations = queryMultiAdapter((self.context, self.request), name="eea_versions")
 
         res = {
             "newer_versions": {
                 "@id": f"{self.context.absolute_url()}/@newer-versions",
-                "items": relations.newer_versions() if relations else []
+                "items": relations.newer_versions() if relations else [],
             },
             "older_versions": {
                 "@id": f"{self.context.absolute_url()}/@older-versions",
-                "items": relations.older_versions() if relations else []
-            }
+                "items": relations.older_versions() if relations else [],
+            },
         }
         result["eea.versions"].update(res)
         return result
 
 
 class EEAVersionsGet(Service):
-    """ EEA Versions Get """
+    """EEA Versions Get"""
 
     def reply(self):
         """Reply with versions"""
         versions = EEAVersions(self.context, self.request)
-        return versions(expand=True, prefix="expand.eea.")[
-            "eea.versions"
-        ]
+        return versions(expand=True, prefix="expand.eea.")["eea.versions"]
