@@ -1,29 +1,25 @@
-""" Custom setup
-"""
+"""Custom setup"""
+
 from Products.CMFPlone.interfaces import INonInstallable
 from zope.interface import implementer
 
 
 @implementer(INonInstallable)
 class HiddenProfiles:
-    """ Hidden profiles
-    """
+    """Hidden profiles"""
 
     def getNonInstallableProfiles(self):
-        """ Hide uninstall profile from site-creation and quickinstaller.
-        """
+        """Hide uninstall profile from site-creation and quickinstaller."""
         return [
-            'eea.api.versions:uninstall',
+            "eea.api.versions:uninstall",
         ]
 
 
 def post_install(context):
-    """ Post install script
-    """
+    """Post install script"""
     # Do something at the end of the installation of this package.
 
 
 def uninstall(context):
-    """ Uninstall script
-    """
+    """Uninstall script"""
     # Do something at the end of the uninstallation of this package.
