@@ -1,17 +1,18 @@
-""" eea.api.versions Installer
-"""
+"""eea.api.versions Installer"""
+
 import os
 from os.path import join
 from setuptools import setup, find_packages
 
-NAME = 'eea.api.versions'
-PATH = NAME.split('.') + ['version.txt']
-with open(join(*PATH), 'r', encoding='utf-8') as version_file:
+NAME = "eea.api.versions"
+PATH = NAME.split(".") + ["version.txt"]
+with open(join(*PATH), "r", encoding="utf-8") as version_file:
     VERSION = version_file.read().strip()
 
-with open("README.rst", 'r', encoding='utf-8') as readme_file:
-    with open(os.path.join("docs", "HISTORY.txt"), 'r',
-              encoding='utf-8') as history_file:
+with open("README.rst", "r", encoding="utf-8") as readme_file:
+    with open(
+        os.path.join("docs", "HISTORY.txt"), "r", encoding="utf-8"
+    ) as history_file:
         long_description = readme_file.read() + "\n" + history_file.read()
 
 setup(
@@ -33,26 +34,26 @@ setup(
         "Operating System :: OS Independent",
         "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
     ],
-    keywords='EEA Add-ons Plone Zope',
-    author='European Environment Agency: IDM2 A-Team',
-    author_email='eea-edw-a-team-alerts@googlegroups.com',
-    url='https://github.com/eea/eea.api.versions',
-    license='GPL version 2',
-    packages=find_packages(exclude=['ez_setup']),
-    namespace_packages=['eea', 'eea.api'],
+    keywords="EEA Add-ons Plone Zope",
+    author="European Environment Agency: IDM2 A-Team",
+    author_email="eea-edw-a-team-alerts@googlegroups.com",
+    url="https://github.com/eea/eea.api.versions",
+    license="GPL version 2",
+    packages=find_packages(exclude=["ez_setup"]),
+    namespace_packages=["eea", "eea.api"],
     include_package_data=True,
     zip_safe=False,
     install_requires=[
-        'setuptools',
+        "setuptools",
         # -*- Extra requirements: -*-
     ],
     extras_require={
-        'test': [
-            'plone.app.testing',
+        "test": [
+            "plone.app.testing",
         ],
     },
     entry_points="""
     [z3c.autoinclude.plugin]
     target = plone
-    """
+    """,
 )
