@@ -3,6 +3,10 @@ Changelog
 
 1.2-dev0 - (unreleased)
 ---------------------------
+* Change: Replace Python linting to ruff
+  [mihaidobrescu1111 = refs #286821]
+* Change: Add plone6 tests
+  [mihaidobrescu1111 = refs #293593]
 
 1.1 - (2024-12-18)
 ---------------------------
